--- a/front-end/front-end/src/App.css
+++ b/front-end/front-end/src/App.css
@@ -51,3 +51,17 @@
   width: 250px;
   height: 250px;
 }
+
+.song-container {
+  text-align: center;
+  border: black 5px dotted;
+  width: 350px;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 10px;
+  position: relative;
+
+}
