--- a/front-end/front-end/src/App.css
+++ b/front-end/front-end/src/App.css
@@ -1,5 +1,8 @@
 body {
 background-color: beige;
+background: url("https://thumbs.dreamstime.com/b/dirty-music-background-21777451.jpg");
+background-repeat: no-repeat;
+background-size: cover;
 
 }
 
@@ -47,11 +50,21 @@ background-color: beige;
   text-align: center;
 }
 
-.play-list {
+.header {
   text-align: center;
-  align-items: center;
+  font-size: x-large;
+  /* font-size: 45px; */
+  font-family: Jazz LET, fantasy;
+}
+.play-list {
+justify-content: center;
+  text-align: center;
   border: black solid 2px;
+  width: 400px;
+  margin: auto;
+  border-radius: 25px;
   height: fit-content;
+  ;
 }
 
 .album-image {
@@ -59,18 +72,23 @@ background-color: beige;
   height: 120px;
 }
 
-.song-container {
-  text-align: center;
-  /* border: black 5px dotted; */
-  width: 250px;
-  height: 250px;
-}
+
+  
+
 
 .container {
+ align-items: center;
+ text-align: center;
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   padding: 10px;
-  position: relative;
+  position: absolute;
+  border: #282c34 dotted 5px;
+  background-color: black ;
+  opacity: 0.8;
+  color: white;
 
 }
+
 
